--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Eugenio D. Macias
 logo: 
 description: Hi, I am Eugenio Macias an international student at Brown University majoring in Mathematics-Computer Science and Statistics. I am interested in the real life applications of differential equations, probability theory, and statistical inference. My hobbies include playing chess, competitive classical guitar, and travelling the world.
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
