--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Eugenio D. Macias
 logo: gportfolio_profile_picture.png
+description: Connect with me on [LinkedIn](https://www.linkedin.com/in/eugenio-macias/)
 show_downloads: false
 theme: jekyll-theme-minimal
