--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 logo: gportfolio_profile_picture.png
-description: Connect with me on [LinkedIn](https://www.linkedin.com/in/eugenio-macias/)
+description: "Hi, I'm Eugenio Macias! I'm an international student at Brown University, majoring in Mathematics and Computer Science. Connect with me on [LinkedIn](https://www.linkedin.com/in/eugenio-macias/)."
 show_downloads: false
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
