--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: Eugenio Macias
 logo: gportfolio_profile_picture.png
 description: "Hi, I'm Eugenio Macias! I'm an international student at Brown University, majoring in Mathematics and Computer Science. Connect with me on [LinkedIn](https://www.linkedin.com/in/eugenio-macias/)."
 show_downloads: false
