--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Eugenio Macias
-logo: gportfolio_profile_picture.png
-description: "Hi, I'm Eugenio Macias! I'm an international student at Brown University, majoring in Mathematics and Computer Science. Connect with me on [LinkedIn](https://www.linkedin.com/in/eugenio-macias/)."
+title: Eugenio D. Macias
 show_downloads: false
 theme: jekyll-theme-cayman
